# Inteligence

./: .gitignore  7  Cargo.toml  README.md
src/: client.rs  main.rs  print_utils.rs
src/scanners/: mod.rs  scanner.rs  scrapers.rs
src/scanners/china/: chinadaily.rs  mod.rs  scmp.rs
src/scanners/french/: dauphine.rs  lemonde.rs  leparisien.rs  mod.rs
src/scanners/russia/: mod.rs  tass.rs
