[package]
name = "inteligence"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.19.0"
reqwest = {version = "0.11", features = ["blocking"]}
tokio = { version = "1.36.0", features = ["full"] }
crypto = "0.5.1"
hex = "0.4.3"
flate2 = { version = "1.0.17", features = ["zlib-ng"], default-features = false }
tiger = "0.2.1"
pretty_env_logger = "0.5.0"
log = "0.4.21"
